samples/_failures_safe/1761529557_c3cc12_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_67dac0b6.c: In function ‘main’:
./samples/SAFE/__tmp_67dac0b6.c:149:13: error: ‘level’ undeclared (first use in this function)
  149 |         if (level
      |             ^~~~~
./samples/SAFE/__tmp_67dac0b6.c:149:13: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_67dac0b6.c:149:18: error: expected ‘)’ at end of input
  149 |         if (level
      |            ~     ^
      |                  )
./samples/SAFE/__tmp_67dac0b6.c:149:9: error: expected declaration or statement at end of input
  149 |         if (level
      |         ^~
./samples/SAFE/__tmp_67dac0b6.c:149:9: error: expected declaration or statement at end of input
